--- a/.github/workflows/train-model.yml
+++ b/.github/workflows/train-model.yml
@@ -23,26 +23,26 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: $AWS_REGION
+          AWS_DEFAULT_REGION: us-east-1
         run: |
-          aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 905418307151.dkr.ecr.us-east-1.amazonaws.com
 
       # Build Docker Image
       - name: Build Docker Image
         run: |
-          docker build -t $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:${{ github.run_number }} .
+          docker build -t 905418307151.dkr.ecr.us-east-1.amazonaws.com/mlopsinfrastack-ecrrepository4d7b3ee1-mhonmkqlgdt6:${{ github.run_number }} .
 
       # Push Docker Image
       - name: Push Docker Image
         run: |
-          docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:${{ github.run_number }}
+          docker push 905418307151.dkr.ecr.us-east-1.amazonaws.com/mlopsinfrastack-ecrrepository4d7b3ee1-mhonmkqlgdt6:${{ github.run_number }}
 
       # CDK Diff
       - name: CDK Diff
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: $AWS_REGION
+          AWS_DEFAULT_REGION: us-east-1
         run: |
           npm install -g aws-cdk
           npm install
@@ -63,7 +63,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: $AWS_REGION
+          AWS_DEFAULT_REGION: us-east-1
         run: |
           npm install -g aws-cdk
           npm install
