--- a/.github/workflows/train-model.yml
+++ b/.github/workflows/train-model.yml
@@ -53,7 +53,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-push
     environment:
-      name: production
+      name: Deploy and Train Model
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
