--- a/.github/workflows/train-model.yml
+++ b/.github/workflows/train-model.yml
@@ -5,11 +5,6 @@ on:
     branches:
       - master
 
-env:
-  AWS_REGION: "us-east-1"
-  ECR_REPOSITORY: "mlopsinfrastack-ecrrepository4d7b3ee1-mhonmkqlgdt6"
-  AWS_ACCOUNT_ID: "905418307151"
-
 jobs:
   # Job 1: Build, Push Docker Image to ECR, CDK Diff
   build-and-push:
@@ -30,6 +25,7 @@ jobs:
       # Build Docker Image
       - name: Build Docker Image
         run: |
+          cd ml-code
           docker build -t 905418307151.dkr.ecr.us-east-1.amazonaws.com/mlopsinfrastack-ecrrepository4d7b3ee1-mhonmkqlgdt6:${{ github.run_number }} .
 
       # Push Docker Image
@@ -44,6 +40,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1
         run: |
+          cd ../ mlops-infra
           npm install -g aws-cdk
           npm install
           cdk diff --context buildNumber=${{ github.run_number }}
@@ -65,6 +62,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1
         run: |
+          cd mlops-infra
           npm install -g aws-cdk
           npm install
           cdk deploy --require-approval never --context buildNumber=${{ github.run_number }}
