--- a/mlops-infra/lambda/Dockerfile
+++ b/mlops-infra/lambda/Dockerfile
@@ -1,17 +1,13 @@
 # Use AWS Lambda base image for Python 3.9
 FROM public.ecr.aws/lambda/python:3.9
 
-# Set working directory
-WORKDIR /app
+# Install dependencies
+COPY requirements.txt ./
+RUN pip install -r requirements.txt
 
-# Copy your requirements.txt into the container
-COPY requirements.txt ./requirements.txt
+# Copy the Lambda function code to the root directory
+COPY predict.py ./
 
-# Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy your Lambda handler script into the container
-COPY predict.py ./predict.py
-
-# Set the Lambda handler function
+# Set the Lambda handler to point to the function in predict.py
 CMD ["predict.lambda_handler"]
+
